--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "PS Events",
     "description": "PS-Events fügt Deiner Webseite oder Deiner Multisite ein mächtiges Events & Bookings System hinzu.",
     "version": "1.4.2",
-    "homepage": "http://premium.wpmudev.org/project/events-and-booking",
+    "homepage": "https://cp-psource.github.io/ps-events/",
     "authors": [{
         "name": "DerN3rd"
       }
